[gd_scene load_steps=3 format=3 uid="uid://bxm8y7gk2qr4w"]

[ext_resource type="Script"    path="res://menus/RankingMenu.gd"      id=1]
[ext_resource type="Script"    path="res://menus/widgets/UIButton.gd" id=2]
[ext_resource type="Texture2D" path="res://assets/images/option.png"  id=3]

[node name="RankingScene" type="Control"]
layout_mode    = 3
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
script         = ExtResource(1)

[node name="Background" type="TextureRect" parent="."]
layout_mode    = 1
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
stretch_mode   = 6
texture        = ExtResource(3)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode    = 1
anchors_preset = 8
anchor_left    = 0.5
anchor_top     = 0.5
anchor_right   = 0.5
anchor_bottom  = 0.5
offset_left    = -400.0
offset_top     = -300.0
offset_right   = 400.0
offset_bottom  = 300.0
alignment      = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode          = 2
horizontal_alignment = 1
vertical_alignment   = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode         = 2

[node name="ModeButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode                         = 2
size_flags_horizontal               = 4
theme_override_constants/separation = 20
alignment                           = 1

[node name="Spacer1b" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode         = 2

[node name="ScoresContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode           = 2
size_flags_horizontal = 4
custom_minimum_size   = Vector2(0, 0)
alignment             = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode         = 2

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment   = 1

[node name="BackButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size   = Vector2(280, 60)
layout_mode           = 2
size_flags_horizontal = 4
script                = ExtResource(2)